--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <div class="col-sm">
         <button type="submit" id="btn_open_cadastro" class="btn btn-primary">Cadastro</button>
         <button type="submit" id="btn_open_login" class="btn btn-primary">Login</button>
-      </div>
+      </div>/
     </div>
   </nav>
 
